# magneto-app

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  dockerfile.local  mypy.ini  pyproject.toml
.github/workflows/: cd.yml  ci-tests.yml
app/: config.py  main.py
app/dependencies_factory/: __init__.py
app/dependencies_factory/clients/: __init__.py  _dynamodb_client_factory.py
app/dependencies_factory/repositories/: __init__.py  _detect_mutant_repository.py
app/dependencies_factory/use_cases/: __init__.py  mutant.py
app/implementations/clients/: __init__.py  _dynamodb_client.py
app/implementations/repositories/: __init__.py
app/implementations/repositories/dynamodb/: __init__.py  detect_mutant_repository.py
app/src/cases/: __init__.py
app/src/cases/detect_mutant/: __init__.py  _detect_mutant_use_case.py  _request.py  _response.py
app/src/domain/: __init__.py
app/src/exceptions/: __init__.py  _mutant_exceptions.py
app/tests/unit/cases/: conftest.py
app/web_app/: __init__.py
app/web_app/routes/: __init__.py  _mutant.py  _stats.py
infrastructure/: .terraform.lock.hcl  locals.tf  main.tf  providers.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
infrastructure/common/dynamo_db/: main.tf  variables.tf
infrastructure/common/ecr/: main.tf  variables.tf
infrastructure/common/gateway/: main.tf  variables.tf
infrastructure/common/iam/: main.tf  variables.tf
infrastructure/common/lambda/: main.tf  output.tf  variables.tf
(+17 files in other folders)
