[tool.poetry]
name = "mercadolibre-test"
version = "0.1.0"
description = "Mercadolibre Test Application"
authors = ["Sergio Bateca"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pre-commit = "^4.0.1"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
pytest = "^8.3.3"
faker = "^33.0.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 99

[tool.isort]
profile = "black"
